    SB-KERNEL:32BIT-LOGICAL-FOO, intended for providing efficient
    logical operations on (UNSIGNED-BYTE 32) values, have been renamed
    to SB-KERNEL:WORD-LOGICAL-FOO.  Modular arithmetic should be used
    instead of the old functions.
  * new feature: on platforms where "dladdr" is available foreign
    function names now appear in backtraces.  (based on Helmut Eller's
    work for CMUCL)
  * documentation: networking interface SB-BSD-SOCKETS' documentation
    has been integrated into the user manual.
  * bug fix: SBCL can now load its contributed modules with REQUIRE
    even if the system-provided entries have been removed from
    ASDF:*CENTRAL-REGISTRY*. Infinite recursion in REQUIRE is also
    detected.
  * bug fix: backtraces involving undefined functions or assembly
    routines are more informative.  (thanks to Brian Downing)
  * bug fix: mutually referent alien structures now work correctly.
    (reported by Rick Taube)
  * bug fix: structures defined by WITH-ALIEN can be referred to
    within other definitions in the same WITH-ALIEN.
  * bug fix: division operators (MOD, TRUNCATE and the like) with
    constant zero divisors and integer dividends no longer generate
    left shifts.
  * bug fix: provide default methods for INPUT-STREAM-P and
    OUTPUT-STREAM-P specialized on SB-GRAY:FUNDAMENTAL-STREAM.
  * bug fix: improve the detection and resolution of MOP metacycles
    (where effective method computation depends on the generic function
    having its effective method computed).  (reported by Bruno Haible)
  * bug fix: pass the right initargs to :BEFORE or :AFTER methods on
    SHARED-INITIALIZE or INITIALIZE-INSTANCE in optimized
    MAKE-INSTANCE constructors.  (reported by Axel Schairer for cmucl)
  * optimization: in taking the GCD of bignums, reduce the two bignums
    to approximately the same size (using Euclid's algorithm) before
    applying the more sophisticated binary GCD.  (thanks to Juho
    Snellman)