@@ -1,6 +1,4 @@
-@node Efficiency
-@comment  node-name,  next,  previous,  up
-@chapter Efficiency
+@cindex Efficiency
 
 FIXME: The material in the CMUCL manual about getting good
 performance from the compiler should be reviewed, reformatted in
