@@ -7,7 +7,9 @@ changes in sbcl-0.8.14 relative to sbcl-0.8.13:
   * new feature: on platforms where "dladdr" is available foreign
     function names now appear in backtraces.  (based on Helmut Eller's
     work for CMUCL)
-  * documentation: networking interface SB-BSD-SOCKETS' documentation
+  * documentation: documentation for SB-BSD-SOCKETS, SB-GRAY, 
+    SB-SIMPLE-STREAMS, and SB-PROFILE have been integrated into the user 
+    manual.
     has been integrated into the user manual.
   * bug fix: SBCL can now load its contributed modules with REQUIRE
     even if the system-provided entries have been removed from
